# safmq

./: AddressParser.cpp  AddressParser.h  CMakeLists.txt  Command.cpp  Command.h  CursorCmds.h  DirectoryList.cpp  DirectoryList.h  ForwardThread.cpp  ForwardThread.h  GroupCmds.h  INSTALL  LICENSE  Log.cpp  Log.h  MessageCmds.h  Mutex.cpp  Mutex.h  NTSysLogger.cpp  NTSysLogger.h  QAccessControl.cpp  QAccessControl.h  QManager.cpp  QManager.h  QStorage.cpp  QStorage.h  QueueCmds.h  README  RELEASE-NOTES  SSLServerThread.cpp  SSLServerThread.h  ServerCmds.h  ServerThread.cpp  ServerThread.h  ServiceThread.cpp  ServiceThread.h  Signal.cpp  Stats.cpp  Stats.h  StreamCache.h  (+35 more)
SAFMQManagerSnapin/: Actor.cpp  Actor.h  ActorPerms.cpp  ActorPerms.h  ActorPerms.rgs  ActorPermsDlg.cpp  ActorPermsDlg.h  AddActorDlg.cpp  AddActorDlg.h  CUserEditor.cpp  CUserEditor.h  CUserEditor.rgs  CommonControls.h  ConfigData.cpp  ConfigData.h  Folder.cpp  Folder.h  GroupAddDialog.cpp  GroupAddDialog.h  GroupEditor.cpp  GroupEditor.h  GroupEditor.rgs  LocalSettings.cpp  LocalSettings.h  LocalSettingsCP.h  NewGroupDlg.cpp  NewGroupDlg.h  NewQueueDlg.cpp  NewQueueDlg.h  NewServerDlg.cpp  NewServerDlg.h  NewUserDlg.cpp  NewUserDlg.h  Node.cpp  Node.h  PasswordDialog.cpp  PasswordDialog.h  SAFMQLocSetEditor.htm  SAFMQLocalSettingsEditor.cpp  SAFMQLocalSettingsEditor.h  (+24 more)
docs/: build.safmq.net.help.bat  build_Sandcastle.bat
java/: .classpath  README  build.xml  makefile  manager_config.xml  qmanager.bat
lib/: MQConnection.cpp  MQConnection.h  MQFactory.cpp  MQFactory.h  MessageQueue.cpp  MessageQueue.h  client_operators.h  footer.html  footer.sf.html  header.html  makefile  php_safmq.help  safmqclient.cpp  safmqclient.dsp  safmqclient.dsw  safmqclient.sln  safmqclient.vcproj  safmqlib.dsp  safmqlib.dsw  safmqlib.vcproj
php_safmq/: Assert.php  README  TestCase.php  config.m4  php_safmq.h  safmq.cpp  test.php
safmq.net/: safmq.net.sln
sample/: safmq-win.conf  safmq.conf
shared/: bufstream.h  dbg_alloc.h  randpq.h  thdlib.cpp  thdlib.h  utilities.cpp  utilities.h
test/: SafmqTest.cpp  makefile  mptest.cpp  safmq-test.conf  test-aid.h  test.bat  test.sh
(+192 files in other folders)
